# winestuff

./: .gitignore  CHANGELOG  CMakeLists.txt  HEADER  INSTALL  LICENSE.Russian  README  TODO  VERSION  corelib.cpp  libwinegame.pro  poldownloader.h  prefix.h
docs/: README
docs/en/: INDEX
docs/en/core/: corelib.txt
docs/ru/: INDEX
docs/ru/core/: corelib.txt  uiclient.txt
l10n/: lwg_ru.qm  lwg_ru.ts
os/: README
os/ubuntu/: changelog  control  copyright  rules  winestuff0.install
src/: CMakeLists.txt  FindWineStuff.cmake  abstractdisc.cpp  abstractdisc.h  corelib.cpp  corelib.h  dvdrunner.cpp  dvdrunner.h  formatinterface.h  inireader.cpp  inireader.h  libwinegame_global.h  plugincore.cpp  plugincore.h  poldownloader.cpp  poldownloader.h  prefix.cpp  prefix.h  prefixcollection.cpp  prefixcollection.h  sourcereader.cpp  sourcereader.h  uiclient.h
src/l10n/: lwg_ru.qm  lwg_ru.ts
src/plugins/native/: CMakeLists.txt  inireader.cpp  inireader.h  native.cpp  native.h
src/plugins/wisotool/: CMakeLists.txt  wisotool.cpp  wisotool.h  wisreader.cpp  wisreader.h
src/tools/wst-listgen/: README  main.cpp  wst-listgen.pro
