cmake_minimum_required(VERSION 2.6)
project (wst_native)
if (NOT QT_USE_FILE)
  set (CMAKE_BUILD_TYPE Debug)
  FIND_PACKAGE (Qt4 REQUIRED)
  FIND_PACKAGE (WineStuff REQUIRED)
endif (NOT QT_USE_FILE)
INCLUDE (${QT_USE_FILE})
if (NOT WSTDIR)
  set (WSTDIR ${CMAKE_SOURCE_DIR})
endif (NOT WSTDIR)
include_directories (${WSTDIR})
SET (HEADERS inireader.h native.h)
SET (SOURCES inireader.cpp native.cpp)
qt4_wrap_cpp(MOC ${HEADERS})
add_library (wst_native SHARED ${SOURCES} ${MOC})
target_link_libraries(wst_native ${WINESTUFF_LIBRARIES} ${QT_LIBRARIES})

set(WST_PLUGINS_DIR lib/winestuff/plugins)
install (TARGETS wst_native DESTINATION ${WST_PLUGINS_DIR})
