cmake_minimum_required(VERSION 2.6)
project (wst_wisotool)
if (NOT QT_USE_FILE)
  set (CMAKE_BUILD_TYPE Debug)
  FIND_PACKAGE (Qt4 REQUIRED)
  FIND_PACKAGE (WineStuff REQUIRED)
endif (NOT QT_USE_FILE)
INCLUDE (${QT_USE_FILE})
if (NOT WSTDIR)
  set (WSTDIR ${CMAKE_SOURCE_DIR})
endif (NOT WSTDIR)
include_directories (${WSTDIR})
SET (HEADERS wisreader.h wisotool.h)
SET (SOURCES wisreader.cpp wisotool.cpp)
qt4_wrap_cpp(MOC ${HEADERS})
add_library (wst_wisotool SHARED ${SOURCES} ${MOC})
target_link_libraries(wst_wisotool ${WINESTUFF_LIBRARIES} ${QT_LIBRARIES})

set(WST_PLUGINS_DIR lib/winestuff/plugins)
install (TARGETS wst_wisotool DESTINATION ${WST_PLUGINS_DIR})
